--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_storage: ^8.1.3
   provider: ^5.0.0
   image_picker: ^0.8.1+1
+  fluttertoast: ^8.0.7
 
 dev_dependencies:
   flutter_test:
