--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   provider: ^5.0.0
   image_picker: ^0.8.1+1
   fluttertoast: ^8.0.7
+  uuid: ^3.0.4
 
 dev_dependencies:
   flutter_test:
