--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   image_picker: ^0.8.1+1
   fluttertoast: ^8.0.7
   uuid: ^3.0.4
+  timeago: ^3.1.0
 
 dev_dependencies:
   flutter_test:
