--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 .vscode/settings.json
+
+
+# firebase config file
+google-services.json
